--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,13 @@
 /********** My CSS **********/
 
+@import url('https://fonts.googleapis.com/css2?family=Balthazar&family=Epilogue:ital,wght@0,400;0,500;0,600;0,800;1,300&family=Gothic+A1:wght@200;300;400;500;600;700;800&family=Inter:wght@100;200;300;400;600&family=Karla:wght@200;300;400;500;600;700;800&display=swap');
+
+
 :root {
     --primary: #B78D65;
     --light: #F8F8F8;
     --dark: #252525;
+    --red: #F00607;
 }
 
 h1,
@@ -12,6 +16,8 @@ h2,
 .h2,
 .fw-bold {
     font-weight: 600 !important;
+  font-family: 'Balthazar', serif;
+    
 }
 
 h3,
@@ -29,6 +35,22 @@ h6,
 .fw-normal {
     font-weight: 400 !important;
 }
+.logo{
+   color: #F00607 !important;
+   font-weight: 800;
+}
+.home{
+    color: #252525 !important;
+}
+.appointment{
+    background-color: #F00607;
+    border: none;
+    outline: none;
+}
+.appointment:hover{
+    background-color: #cc0606;
+}
+
 
 .back-to-top {
     position: fixed;
@@ -36,9 +58,18 @@ h6,
     right: 30px;
     bottom: 30px;
     z-index: 99;
+    background-color: var(--red);
+    color: #FFFFFF;
+    border: none !important;
+    
 }
 
-
+.back-to-top:hover {
+    background-color: var(--red);
+    border: none !important;
+    outline: none;
+    
+}
 /*** Spinner ***/
 #spinner {
     opacity: 0;
@@ -91,16 +122,27 @@ h6,
 }
 
 .btn-outline-body {
-    color: var(--primary);
+    color: var(--light);
     border-color: #777777;
 }
 
 .btn-outline-body:hover {
     color: #FFFFFF;
-    background: var(--primary);
+    background: var(--red);
     border-color: var(--primary);
 }
 
+.btn-outline-body-contact{
+    color: var(--dark);
+    border-color: #777777;
+}
+
+
+.btn-outline-body-contact:hover{
+    color: #FFFFFF;
+    background: var(--red);
+    border-color: var(--primary);
+}
 
 /*** Navbar ***/
 .navbar .dropdown-toggle::after {
@@ -174,6 +216,14 @@ h6,
     background: rgba(0, 0, 0, .5);
 }
 
+.header-carousel .owl-carousel-item img {
+    /* position: absolute; */
+    width: 100%;
+    height: 64rem;
+    object-fit:cover;
+}
+
+
 @media (max-width: 768px) {
     .header-carousel .owl-carousel-item {
         position: relative;
@@ -244,13 +294,28 @@ h6,
 
 /*** Section Title ***/
 .section-title {
-    color: var(--primary);
+    color: var(--red);
     font-weight: 600;
     letter-spacing: 5px;
     text-transform: uppercase;
+    font-size: 42px;
 }
 
+.counter{
+    border-color: var(--red) !important;
+}
 
+.btech{
+    font-size: 24px;
+}
+
+.creative{
+    font-size: 24px;
+}
+
+.ceo{
+    max-width: 100%;
+}
 /*** Facts ***/
 .fact-item .fact-icon {
     width: 120px;
@@ -285,12 +350,14 @@ h6,
     position: relative;
     height: 100%;
     min-height: 400px;
+    max-width: 100%;
 }
 
 .about-img img,
 .feature-img img {
     position: absolute;
-    width: 60%;
+    /* width: 60%; */
+    max-width: 100%;
     height: 80%;
     object-fit: cover;
 }
@@ -304,7 +371,7 @@ h6,
 .feature-img::before {
     position: absolute;
     content: "";
-    width: 60%;
+    max-width: 100%;
     height: 80%;
     /* top: 10%; */
     /* left: 20%; */
@@ -373,9 +440,7 @@ h6,
 
 /*** Team ***/
 
-.ceo{
-  
-}
+
 .team-items {
     margin: -.75rem;
 }
