--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,11 @@
 
 /* @import url('https://fonts.googleapis.com/css2?family=Balthazar&family=Epilogue:ital,wght@0,400;0,500;0,600;0,800;1,300&family=Gothic+A1:wght@200;300;400;500;600;700;800&family=Inter:wght@100;200;300;400;600&family=Karla:wght@200;300;400;500;600;700;800&display=swap'); */
 
-
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
 :root {
     --primary: #B78D65;
     --light: #F8F8F8;
@@ -375,7 +379,8 @@ h6,
     font-weight: 600;
     letter-spacing: 5px;
     text-transform: uppercase;
-    font-size: 42px;
+    font-size: 36px;
+    
 }
 
 .counter{
