--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,9 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+   
   }
+
 :root {
     --primary: #B78D65;
     --light: #F8F8F8;
@@ -16,7 +18,6 @@
 
 html{
     scroll-behavior: smooth;
-   
 }
 
 
@@ -321,6 +322,7 @@ h6,
     .header-carousel .owl-carousel-item p {
         font-size: 16px !important;
     }
+
 }
 
 .header-carousel .owl-dots {
@@ -375,6 +377,7 @@ h6,
 
 /*** Section Title ***/
 .section-title {
+    /* padding-top: 64px; */
     color: var(--red);
     font-weight: 600;
     letter-spacing: 5px;
@@ -464,10 +467,11 @@ h6,
 
 
 @media (max-width: 768px) {
-   /* .ceoProfile{
-    width: 100%;
-    object-fit: cover;
-   } */
+    
+    .section-title {
+        padding-top: 64px;
+        
+    }
 }
 
 /*** Service ***/
